[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testing-fixtures"
version = "0.0.2"
authors = [
    { name = "Abid H. Mujtaba", email = "abid.naqvi83@gmail.com" }
]
description = "New approach to Python test fixtures (compatible with pytest)"
keywords = ["tests", "testing", "fixture", "fixtures"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/abid-mujtaba/testing-fixtures"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pylint",
    "pytest",
]

[tool.hatch.build]
exclude = [
    "*.md",
    ".vscode/",
    "example",
    "tests/"
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/testing"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
dist_path = "dist/"
upload_to_release = true    # auto create Github Release
upload_to_pypi = false
remove_dist = false

[tool.pylint.'MESSAGE CONTROL']
disable = [
    "invalid-name"
]
