[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testing-fixtures"
version = "0.3.0"
authors = [
    { name = "Abid H. Mujtaba", email = "abid.naqvi83@gmail.com" }
]
description = "New approach to Python test fixtures (compatible with pytest)"
keywords = ["tests", "testing", "fixture", "fixtures"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typing-extensions"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/abid-mujtaba/testing-fixtures"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pylint",
    "pytest",
]

[tool.hatch.build]
exclude = [
    "*.md",
    ".vscode/",
    "example",
    "tests/"
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/testing"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_release = true    # auto create Github Release

[tool.ruff]
select = ["ALL"]
ignore = [
    "D203",  # First 4 rules are mutually incompatible and incompatible with ruff format
    "D212",
    "COM812",
    "ISC001",
    "FBT",  # Boolean values in function signatures
    "ANN101",  # Annotate `self` parameter of class methods
]

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = [
    "S101"  # assert is allowed in tests
]
"tests/unit/*.py" = [
    "T201"  # we are using print to track execution path
]

[tool.pylint.'MESSAGE CONTROL']
disable = [
    "invalid-name",
    "no-else-raise",  # conflicts with ruff
]
